fix(docs.ws): Search results are not enough visible

--- a/apps/docs.blocksense.network/blocksense-theme/dark.css
+++ b/apps/docs.blocksense.network/blocksense-theme/dark.css
@@ -67,3 +67,11 @@
 .dark .nextra-sidebar button:hover {
   @apply text-white transition duration-300 ease-in-out;
 }
+
+.dark .x\:text-base {
+  @apply text-white;
+}
+
+.dark mark {
+  @apply text-blue-500 font-bold;
+}
